fix journey width on small devices

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -69,7 +69,6 @@
 .card__subtitle {
     display: inline-block;
     font-size: var(--normal-font-size);
-    white-space: nowrap;
 }
 
 .flex {
